deployment/web.deploy.yml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: web
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      tier: frontend
      track: stable
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: web
        tier: frontend
        track: stable
    spec:
      containers:
        - name: web
          image: "stevenxie/stevenxie.me"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
