deployment/web-varnish.service.yml
---

apiVersion: v1
kind: Service

metadata:
  labels:
    app: web-varnish
    tier: frontend
    track: stable
  name: web-varnish
  namespace: default

spec:
  type: ClusterIP
  ports:
    - name: varnish
      protocol: TCP
      port: 80
  selector:
    app: web-varnish
    tier: frontend
    track: stable
