deployment/ingress.yml
---

apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  annotations:
    ingress.kubernetes.io/custom-response-headers: X-Service:web
    traefik.ingress.kubernetes.io/redirect-regex: ^https?://www.stevenxie.me/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://stevenxie.me/$1
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: web
  namespace: default

spec:
  rules:
    - host: stevenxie.me
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: http
    - host: www.stevenxie.me
      http:
        paths:
          - backend:
              serviceName: traefik
              servicePort: 80


---

apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  annotations:
    ingress.kubernetes.io/custom-response-headers: X-Service:web-redirect
    traefik.ingress.kubernetes.io/redirect-regex: ^https?://stevenxie.com/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://stevenxie.me/$1
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: web-redirect
  namespace: default

spec:
  rules:
    - host: stevenxie.com
      http:
        paths:
          - backend:
              serviceName: traefik
              servicePort: 80


---

apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  annotations:
    ingress.kubernetes.io/custom-response-headers: X-Service:web-redirect-www
    traefik.ingress.kubernetes.io/redirect-regex: ^https?://www.stevenxie.com/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://stevenxie.me/$1
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: web-redirect-www
  namespace: default

spec:
  rules:
    - host: www.stevenxie.com
      http:
        paths:
          - backend:
              serviceName: traefik
              servicePort: 80
